Added html structure

--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <link rel="icon" sizes="32x32" href="./images/techover.ico" />
-
-  <title>Techover - Motivationsgenerator</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Techover Advice</title>
 </head>
 
 <body>
-  <main>
-    <div class="card">
-      <div id="quote">
-
-      </div>
+  <div class="advice-card">
+    <h2>ADVICE #45</h2>
+    <p>"People who are good at what they do, find a way to tie it to revenue"</p>
+    <div class="quote-icon">
+      <span>&quot;</span>
     </div>
-  </main>
+    <div class="logo">
+      <img src="techover-logo.png" alt="Techover Logo">
+      <span>TECHOVER</span>
+    </div>
+  </div>
 </body>
 
 </html>
